# BCWS-Corpus-Assisted-Discourse-Study

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  CODEX_HANDOFF.md  LICENSE.txt  README.md  agent_script_split.yaml  electron-builder.yml  index.html  local-manifest.yaml  machine_tree.yaml  package-lock.json  package.json  package_manifest.yaml  pyproject.toml  seed_manifest.yaml  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.js  vite.config.mjs
.codex/: config.toml
.codex/agents/: account_verifier.toml  collector_engineer.toml  docs_researcher.toml  qa_auditor.toml  registry_researcher.toml
agents/: registry.yaml
apps/desktop/: index.html  (+2 more)
connectors/: README.md
contracts/: acceptance_gates.yaml  content_shapes.yaml  evidence_classes.yaml  relationship_types.yaml  source_lanes.yaml  work_breakdown.yaml
docs/: desktop-spine-audit.md
dotnet/: OpenFireside.sln
electron/: db-lifecycle.mjs  main.mjs  preload.mjs
phases/: phase-packaging.md
playbooks/: foundation.yaml  platform_canaries.yaml  scale_corpus_runtime.yaml  source_lanes_and_mapping.yaml
scripts/: __init__.py  _repo_preflight.py  check_control_plane.py  dev-desktop.mjs  runtime_preflight.py  validate-g70422-local-capture.mjs  validate_seed.py
skills/: registry.yaml
sql/: control_plane_state.sql
src/: App.jsx  bcwsApi.js  bcwsPerimeter.js  localCapture.js  main.jsx  objectModel.js  styles.css  types.d.ts
tests/: test_seed_manifest.py  test_sqlite_schema.py  test_taxonomy_contract.py  test_validate_seed.py
validation/: validation_targets.yaml
(+332 files in other folders)
