[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-fireside"
version = "0.1.0"
description = "Local-first wildfire discourse workstation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "orjson>=3.10",
  "python-json-logger>=2.0",
  "alembic>=1.13",
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["services/api", "packages/config", "packages/diagnostics"]

[tool.pytest.ini_options]
pythonpath = ["services/api", "packages/config", "packages/diagnostics"]
testpaths = ["tests"]
